<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="hint_username">Input your username</string>
    <string name="hint_email" translatable="false">exp : user@gmail.com</string>
    <string name="hint_password">Input your password</string>
    <string name="error_username">Can\'t be less than 2 characters</string>
    <string name="error_email">Email must be correct</string>
    <string name="error_password">Password must be 6 characters</string>
    <string name="error_register">Failed to register account</string>
    <string name="check">Check your email or password</string>
    <string name="mystoryapp" translatable="false">MyStoryApp</string>
    <string name="we_all_have_a_story">We all have a story</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_your_account">Register your account</string>
    <string name="photo">Photo</string>
    <string name="image_add_photo">image add photo</string>
    <string name="camera">Camera</string>
    <string name="hint_description">What do you want to tell…</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="description_splash">Don\'t hesitate to tell yourself</string>
    <string name="already_account">Already have an account ?</string>
    <string name="data_not_found">Oops, data not found....</string>
    <string name="check_connection">Oops, check your connection…</string>
    <string name="try_again">Try again</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_out">Not out</string>
    <string name="log_out_warning">You log out from apps</string>
    <string name="upload_story">Upload story</string>
    <string name="add_story">Add Story</string>
    <string name="warning_upload">Please complete the file with the description</string>
    <string name="success_add_story">Successfully added story</string>
    <string name="error_add_story">Failed to add story, please try again</string>
    <string name="success_register">Successfully register account</string>
    <string name="warning_input">Incomplete data</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="image_login">Image login</string>
    <string name="image_register">Image Register</string>
    <string name="start_now">Start Now</string>
    <string name="description_menu2">When your day is heavy then this application is the solution</string>
    <string name="let_start">Let\'s start</string>
    <string name="description_menu3">Let start with application my story, have god day to you are</string>
    <string name="title_menu2">Easy and easy</string>
    <string name="image_welcome">image_welcome</string>
    <string name="description_menu1">You want to tell something heavy, calm down this application is the solution hehe</string>
    <string name="title_menu1">Easy and complicated application</string>
    <string name="share_location">Share Location</string>
    <string name="location_message">Please Activated your Location</string>
    <string name="permission_location_warning">Location not Allowed</string>
    <string name="warning_active_location">Please active your location</string>
    <string name="story_location">Story Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="language_settings">Language Settings</string>
</resources>